fixed the responsiveness on mobile view

--- a/game.css
+++ b/game.css
@@ -108,6 +108,14 @@
   cursor: pointer;
 }
 
+@media (max-width: 400px){
+.main-container h1{
+  font-size: 2.2rem;
+}
+  
+}
+
+
 
 
 
